Fix some layout issues on small screens for index page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,10 @@
 @import (less) "normalize.css";
 
-@font-family-sans-serif: "calluna sans","Helvetica Neue", Helvetica, "Segoe UI", sans-serif;
+@font-family-sans-serif: "calluna sans",
+                          "Avenir Next", 
+                          "Helvetica Neue", 
+                          "Segoe UI",
+                           sans-serif;
 @font-family-serif:"calluna","georgia",serif;
 @monospace-font-family: "Triplicate T4c",monospace;
 @fancy-font-family: "estilo-regular",@font-family-serif;
@@ -12,6 +16,9 @@
 @colorado-red:#BF0A30;
 @colorado-yellow:#FFD700;
 @white:#FEFEFE;
+
+//breakpoint at which default layout fails
+@screen-small: 625px;
 
 *{
     font-variant-ligatures:common-ligatures;
@@ -30,7 +37,6 @@ html {
     min-height: 100%;
     margin:0 auto;
     hyphens: auto;
-    padding:2rem;
     background: @white;
 }
 
@@ -81,7 +87,6 @@ a{
 .main-header {
   margin:0px;
   margin-bottom: 5rem;
-  padding:1rem 0rem;
   //.colorado-bottom-border-thin;
   .content{
     h1{
@@ -96,7 +101,10 @@ a{
       padding:0.5rem 1rem 0.6rem 1rem;
     }
   }
+}
 
+.main-content, .main-header {
+  max-width: 100%;
 }
 
 .line-through{
@@ -109,7 +117,7 @@ a{
 
 .lead{
   font-size:1.2rem;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .posts-lists {
@@ -215,4 +223,43 @@ a{
         font-size:1.1rem;
         margin-bottom: 0rem;
     }
+}
+
+@media (max-width: @screen-small) {
+  .archived-post{
+    padding:0.25rem 0rem;
+     &:hover{
+      background: lighten(@colorado-blue, 75%);
+      box-shadow:none;
+     }
+  }
+  .nav-links{
+    justify-content:space-between;
+    li{
+      margin:0px;
+      margin-top:1rem;
+      a{
+        padding:0.25rem 0.5rem 0.3rem;
+      }
+    }
+  }
+
+  .main-content{
+    padding:0rem 1.25rem;
+  }
+  .main-header {
+    border:1px solid transparent;
+    padding:0rem 0.75rem;
+    background: darken(@colorado-blue,10%);
+    color:@white;
+    margin:0;
+    margin-bottom: 1.5rem;
+    .colorado-bottom-border-thin;
+    .content{
+      h1{
+        color:inherit;
+        font-size:2rem;
+      }
+    }
+  }
 }
